# Develop

./: CMakeLists.txt  HotPlug.cpp  HotPlug.h  README.md  app  main.cpp
cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  hotplug
cmake-build/.cmake/api/v1/reply/: cache-v2-02babeb5eab782d09cf4.json  cache-v2-913f37449393ff88b3ad.json  cache-v2-faebbbb5b2486ed09872.json  cmakeFiles-v1-99c3673734dc6bcbeede.json  cmakeFiles-v1-9b3f1c9acd9fcf64924d.json  codemodel-v2-004eb813d724a4e75f25.json  codemodel-v2-7e56025904a687bfb4cf.json  index-2024-01-18T10-59-09-0418.json  index-2024-02-29T07-50-14-0698.json  index-2024-03-03T05-06-54-0342.json  target-hotplug-Debug-2552d1ae305be028ae3a.json  target-hotplug-Debug-c2e01604973ac6605e7e.json
develop/: main.cpp
